@@ -1,8 +1,10 @@
 package com.skillmentor.root.service.impl;
 
 import com.skillmentor.root.dto.ClassRoomDTO;
+import com.skillmentor.root.dto.MentorDTO;
 import com.skillmentor.root.entity.ClassRoomEntity;
 import com.skillmentor.root.mapper.ClassRoomEntityDTOMapper;
+import com.skillmentor.root.mapper.MentorEntityDTOMapper;
 import com.skillmentor.root.repository.ClassRoomRepository;
 import com.skillmentor.root.service.ClassRoomService;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -10,7 +12,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+
 
 @Service
 public class ClassRoomServiceImpl implements ClassRoomService {
@@ -20,10 +22,17 @@ public class ClassRoomServiceImpl implements ClassRoomService {
 
     @Override
     public List<ClassRoomDTO> getAllClassRooms() {
-        List<ClassRoomEntity> classRoomEntities = classRoomRepository.findAll();
-        return classRoomEntities.stream()
-                .map(ClassRoomEntityDTOMapper::map)
-                .collect(Collectors.toList());
+        final List<ClassRoomEntity> classRoomEntities = classRoomRepository.findAll();
+        return classRoomEntities.stream().map(
+                entity->{
+                    final ClassRoomDTO classRoomDTO = ClassRoomEntityDTOMapper.map(entity);
+                    if (entity.getMentor() != null) {
+                        final MentorDTO mentorDTO = MentorEntityDTOMapper.map(entity.getMentor());
+                        classRoomDTO.setMentorDTO(mentorDTO);
+                    }
+                    return classRoomDTO;
+                }
+        ).toList();
     }
 
     @Override
